# efast

./: .gitignore  LICENSE  README.md  environment.yml  eoprofiling.py  pyproject.toml  requirements.txt  run_efast.py  run_run_efast.sh  setup.py
.github/workflows/: ruff.yml
efast/: binning.py  constants.py  distance_transform_udf.py  efast.py  efast_openeo.py  eoprofiling.py  s2_processing.py  s2_processing_openeo.py  s3_processing.py  s3_processing_openeo.py  time_measurement.py
efast/openeo/preprocessing/: __init__.py  general.py  s2.py  s3.py
efast/openeo/udf/: compute_s3_composite_weights.py
pyefast/: __init__.py  efast.py  s2_processing.py  s3_processing.py
test_data/S2/raw/S2A_MSIL2A_20230911T112121_N0509_R037_T28PDC_20230911T161500.SAFE/: INSPIRE.xml  MTD_MSIL2A.xml  manifest.safe
test_data/S2/raw/S2A_MSIL2A_20230921T112111_N0509_R037_T28PDC_20230921T195052.SAFE/: INSPIRE.xml  MTD_MSIL2A.xml  manifest.safe
test_data/S2/raw/S2B_MSIL2A_20230916T112119_N0509_R037_T28PDC_20230916T140957.SAFE/: INSPIRE.xml  MTD_MSIL2A.xml  manifest.safe
test_data/S3/raw/S3A_SY_2_SYN____20230911T104432_20230911T104732_20230913T051453_0180_103_165_2700_PS1_O_NT_002.SEN3/: tiepoints_olci.nc  time.nc  xfdumanifest.xml
test_data/S3/raw/S3A_SY_2_SYN____20230914T110659_20230914T110959_20230916T044917_0180_103_208_2700_PS1_O_NT_002.SEN3/: tiepoints_olci.nc  time.nc  xfdumanifest.xml
test_data/S3/raw/S3A_SY_2_SYN____20230915T104048_20230915T104348_20230917T055557_0180_103_222_2700_PS1_O_NT_002.SEN3/: tiepoints_olci.nc  time.nc  xfdumanifest.xml
test_data/S3/raw/S3A_SY_2_SYN____20230918T110315_20230918T110615_20230920T041223_0179_103_265_2700_PS1_O_NT_002.SEN3/: tiepoints_olci.nc  time.nc  xfdumanifest.xml
test_data/S3/raw/S3A_SY_2_SYN____20230919T103704_20230919T104004_20230921T052656_0180_103_279_2700_PS1_O_NT_002.SEN3/: tiepoints_olci.nc  time.nc  xfdumanifest.xml
test_data/S3/raw/S3B_SY_2_SYN____20230912T112023_20230912T112323_20230913T143025_0180_084_037_2700_PS2_O_NT_002.SEN3/: Syn_Oa04_reflectance.nc  Syn_Oa06_reflectance.nc  Syn_Oa08_reflectance.nc  Syn_Oa17_reflectance.nc  tiepoints_olci.nc  time.nc  xfdumanifest.xml
test_data/S3/raw/S3B_SY_2_SYN____20230913T105412_20230913T105712_20230914T204240_0179_084_051_2700_PS2_O_NT_002.SEN3/: tiepoints_olci.nc  time.nc  xfdumanifest.xml
test_data/S3/raw/S3B_SY_2_SYN____20230916T111638_20230916T111938_20230917T153739_0180_084_094_2700_PS2_O_NT_002.SEN3/: Syn_Oa04_reflectance.nc  tiepoints_olci.nc  time.nc  xfdumanifest.xml
tests/: test_binning.py  test_compute_s3_composite_weights.py  test_preprocessing_openeo.py  test_temporal_score_udf.py  test_udf_tutorial.py
(+138 files in other folders)
